--- a/src/frontend/src/GlobalStyles/index.css
+++ b/src/frontend/src/GlobalStyles/index.css
@@ -12,6 +12,7 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+  @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
   @tailwind base;
   @tailwind components;
   @tailwind utilities;
